--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -366,8 +366,7 @@ p {
 }
 */
 
-  }
-
+  
 /*
     @media only screen and (max-width : 800px){
       .grid-container3 {
@@ -379,7 +378,7 @@ p {
 }
 */
 
-  }
+
 
 h3{
 	font-size:1.5em;
@@ -476,3 +475,12 @@ footer {
 	font-size:1em;
 	margin-bottom: auto;
 }
+
+
+/* img.desktop_pics{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+
+} */
