--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -477,10 +477,7 @@ footer {
 }
 
 
-/* img.desktop_pics{
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 50%;
+img.desktop_pics{
+	border-radius: 2%;
 
-} */
+}
