loam shin website updates

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -177,11 +177,11 @@ img{
 	overflow: hidden;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 110px;
-	width: 240px;
-	height:240px;
+	margin-top: -10px;
+	width: 100%;
+	height:auto;
 	position:relative;
-	border-radius:50%;
+	/* border-radius:50%; */
 
 	/*	does not distort the image*/
 	object-fit: cover; 
@@ -227,8 +227,8 @@ p {
 /*	text-align: left;*/
 	margin-bottom: 50px;
     text-align: left;
-    padding-left: 60px;
-	padding-right: 60px;
+    /* padding-left: 60px;
+	padding-right: 60px; */
     
 }
 
@@ -577,4 +577,71 @@ a.print_resume{
 	display:block;
 	text-align:center;
 	font-size: 130%;
+}
+
+
+
+
+
+/* * { box-sizing: border-box; 
+} 
+
+body { 
+  font-family: 'Open Sans', sans-serif;
+  color: #666;
+} */
+
+/* STRUCTURE */
+
+.wrapper {
+	padding: 5px;
+	max-width: 960px;
+	width: 95%;
+	margin: 20px auto;
+}
+header {
+	padding: 0 15px;
+}
+
+.columns {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	margin: 5px 0;
+}
+
+.column {
+	flex: 1;
+	/* border: 1px solid gray; */
+	margin: 2px;
+	padding: 10px;
+	/* &:first-child { margin-left: 0; }
+	&:last-child { margin-right: 0; } */
+	
+}
+
+footer {
+	padding: 0 15px;
+}
+
+
+@media screen and (max-width: 980px) {
+  .columns .column {
+	margin-bottom: 5px;
+    flex-basis: 40%;
+		/* &:nth-last-child(2) {
+			margin-right: 0;
+		}
+		&:last-child {
+			flex-basis: 100%;
+			margin: 0;
+		} */
+	}
+}
+
+@media screen and (max-width: 680px) {
+	.columns .column {
+		flex-basis: 100%;
+		margin: 0 0 5px 0;
+	}
 }
