--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -198,6 +198,7 @@ img{
 .intro{
 	position: relative;
 	top: 100px;
+	padding-top: 160px;
 	text-align:left;
 }
 
@@ -444,7 +445,8 @@ footer {
 
 /* unvisited link */
  a:link {
-	color: orange;
+	/* color: orange; */
+	color:#77449c;
 	text-decoration: none;
 	/*	text-align: center;*/
 	position: relative;
@@ -453,7 +455,7 @@ footer {
 
 /* visited link */
  a:visited {
- 	color:dodgerblue;
+ 	color:#77449c;
 }
 
 /* mouse over link */
@@ -479,5 +481,6 @@ footer {
 
 img.desktop_pics{
 	border-radius: 2%;
+	box-shadow: 5px 5px;
 
 }
