--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -224,11 +224,12 @@ p {
 	color:black;
 	font-size: 1em;
 	font-family: Quicksand;
-/*	text-align: left;*/
+	/* text-align: left; */
 	margin-bottom: 50px;
     text-align: left;
     /* padding-left: 60px;
 	padding-right: 60px; */
+	
     
 }
 
@@ -509,7 +510,7 @@ footer {
 
 /* unvisited link */
  a:link {
-	color: orange;
+	color: rgb(165, 165, 165);
 	text-decoration: none;
 	/*	text-align: center;*/
 	position: relative;
@@ -518,7 +519,7 @@ footer {
 
 /* visited link */
  a:visited {
- 	color:dodgerblue;
+ 	color:rgb(165, 165, 165);
 }
 
 /* mouse over link */
@@ -528,7 +529,7 @@ footer {
 
 /* selected link */
  a:active {
- 	color:dodgerblue;
+ 	color:rgb(165, 165, 165);
 }
 
 .copyright {
@@ -629,3 +630,33 @@ footer {
 		margin: 0 0 5px 0;
 	}
 } */
+
+
+.card {
+	/* background-color: dodgerblue; */
+	/* color: white; */
+	padding: 1rem;
+	/* height: 4rem; */
+	
+	
+
+  }
+  
+  .cards {
+	max-width: 1200px;
+	margin: 0 auto;
+	display: grid;
+	grid-gap: 1rem;
+	flex-wrap: wrap;
+  }
+  
+  /* Screen larger than 600px? 2 column */
+  @media (min-width: 900px) {
+	.cards { grid-template-columns: repeat(2, 1fr); }
+  }
+  
+  
+  
+  ion-icon {
+	font-size: 64px;
+  }
