--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,7 @@
 @import "https://fonts.googleapis.com/css?family=Quicksand";
 
 body {
-  background-color: white;
+  background-color: rgb(249, 235, 213);
   margin: 0;
   font-family: Quicksand;
   /*  background-color: #f4f4f4;*/
@@ -16,13 +16,14 @@ body {
 @import url("https://fonts.googleapis.com/css?family=Roboto:700");
 
 body {
-  font-family: "Roboto";
+  /* font-family: "Roboto"; */
   /* background-color: #131417;   */
 }
 p {
   text-shadow: 0 0 7px rgba(255, 255, 255, 0.3),
     0 0 3px rgba(255, 255, 255, 0.3);
 }
+
 .containerIntro {
   color: #e5e5e5;
   font-size: 30px;
@@ -101,10 +102,10 @@ img {
 /* header */
 
 .header {
-  background-color: #fff;
+  background-color: rgb(249, 235, 213);
   /*	background-color: black;*/
 
-  /* box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.6); */
+  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.6);
   position: fixed;
   width: 100%;
   z-index: 3;
@@ -116,7 +117,7 @@ img {
   padding: 0;
   list-style: none;
   overflow: hidden;
-  background-color: #fff;
+  background-color: rgb(249, 235, 213);
   /*    background-color: black;*/
 }
 
@@ -131,7 +132,7 @@ img {
 
 .header li a:hover,
 .header .menu-btn:hover {
-  background-color: #f4f4f4;
+  /* background-color: rgb(249, 235, 213); */
   color: black;
 }
 
@@ -157,7 +158,7 @@ img {
 .header .menu-icon {
   cursor: pointer;
   display: inline-block;
-  /* float: right; */
+  float: right;
   padding: 28px 20px;
   position: relative;
   user-select: none;
@@ -263,7 +264,9 @@ img {
 .intro {
   position: relative;
   top: 100px;
+
   padding-top: 160px;
+  padding-bottom: 160px;
   text-align: left;
 }
 
