--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -3,7 +3,7 @@
 
 
 body {
-	background-color:rgb(255, 248, 237);
+	background-color:white;
 	margin: 0;
 	font-family: Quicksand;
 /*  background-color: #f4f4f4;*/
@@ -22,11 +22,13 @@ img{
     height: auto;
 }
 
-
+.logoImg{
+	width: 40px;
+  }
 /* header */
 
 .header {
-	background-color: rgb(249, 235, 213);
+	background-color:white;
 	box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.6);
 	position:fixed;
 	width: 100%;
@@ -42,7 +44,7 @@ img{
 	padding: 0;
 	list-style: none;
 	overflow: hidden;
-	background-color: rgb(249, 235, 213);
+	background-color: white;
 	
 /*    background-color: black;*/
 
