--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -29,7 +29,7 @@ img{
 
 .header {
 	background-color:white;
-	box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.6);
+	/* box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.6); */
 	position:fixed;
 	width: 100%;
 	z-index: 3;
