--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@ body {
 
 .container {
   margin: auto;
-  /* width: 90%; */
+  width: 80%;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Roboto:700");
@@ -29,8 +29,6 @@ p {
   align-items: center;
   justify-content: center;
 }
-
-
 
 .animation {
   height: 50px;
@@ -55,11 +53,11 @@ p {
 }
 .second div {
   /* background-color:#ffe54c; */
-  color:black;
+  color: black;
 }
 .third div {
   /* background-color:#ffe54c; */
-  color:black;
+  color: black;
 }
 
 @keyframes text-animation {
@@ -128,7 +126,7 @@ img {
   /*	border-right: 1px solid #f4f4f4;*/
   text-decoration: none;
   /*	color:black;*/
-  /* color: black; */
+  color: black;
 }
 
 .header li a:hover,
@@ -262,8 +260,6 @@ img {
   box-shadow: 8px 8px 30px -8px rgba(0, 0, 0, 0.75);
 }
 
-
-
 .intro {
   /* position:sticky; */
   /* top: 100px; */
@@ -293,7 +289,7 @@ h3 {
 }
 
 .containerIntro p {
-  color:grey;
+  color: grey;
   /* font-size: px; */
 }
 
@@ -335,7 +331,7 @@ p {
 .grid-container > div {
   /*	background-color:black;*/
   text-align: center;
-  padding: 10px;
+  padding: 20px;
   font-size: 1em;
 }
 
@@ -460,8 +456,24 @@ a:active {
 }
 
 img.desktop_pics {
-  /* border-radius: 2%; */
-  /* box-shadow: 5px 5px; */
+   /* border-radius: 2%;
+  box-shadow: 5px 5px; */
+  border-style:solid;
+   border-width:.5px;
+  border-color: rgb(231, 231, 231);
+  border-radius: 10px;
+  /* background-color: wheat; */
+  backface-visibility: hidden;
+
+}
+
+img.desktop_pics:hover
+{
+  /* background:rgba(0, 0, 0, 0.629); */
+  /* width:320px;
+  height:240px; */
+  opacity: 0.3;
+
 }
 
 .card p {
