--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -431,9 +431,9 @@ unvisited link a:link {
 }
 
 /* visited link */
-a:visited {
+/* a:visited {
   color: rgb(165, 165, 165);
-}
+} */
 
 /* mouse over link */
 a:hover {
